--- a/gen-lines/style.css
+++ b/gen-lines/style.css
@@ -18,9 +18,9 @@ body {
   position: absolute;
   top: 0;
   height: 50px;
-  background: #e9e0d6;
-  border-left: 2px solid #0d1724;
-  border-bottom: 2px solid #0d1724;
+  background: #fff;
+  border-left: 2px solid #000;
+  border-bottom: 2px solid #000;
   border-bottom-left-radius: 15px;
   text-align: center;
 }
@@ -34,10 +34,10 @@ body {
 #error {
   left: 0;
   right: 0;
-  border-right: 2px solid #0d1724;
+  border-right: 2px solid #000;
   border-bottom-right-radius: 15px;
   visibility: hidden;
-  background: #e9e0d6;
+  background: #fff;
   margin: 0 auto;
   line-height: 22px;
   width: 20%;
@@ -47,9 +47,9 @@ body {
 #cover a, #error a {
   font-weight: bold;
   text-decoration: none;
-  color: #0d1724;
+  color: #000;
 }
 
 #cover a:hover, #error a:hover {
-  color: #eb7260;
+  opacity: 0.5;
 }
