--- a/cluster/style.css
+++ b/cluster/style.css
@@ -47,10 +47,11 @@ body {
   top: 0;
   height: 50px;
   background: #fff;
-  border-left: 2px solid #000;
-  border-bottom: 2px solid #000;
-  border-bottom-left-radius: 15px;
+  border: none;
+  border-bottom-left-radius: 5px;
   text-align: center;
+  box-shadow: 0 1px 5px rgba(0, 0, 0, .65);
+  z-index: 2;
   right: 0;
   width: 75px;
   line-height: 50px;
@@ -63,7 +64,7 @@ body {
 }
 
 #cover a:hover {
-  opacity: 0.5;
+  opacity: .5;
 }
 
 #hide {
