--- a/gen-lines/style.css
+++ b/gen-lines/style.css
@@ -19,10 +19,11 @@ body {
   top: 0;
   height: 50px;
   background: #fff;
-  border-left: 2px solid #000;
-  border-bottom: 2px solid #000;
-  border-bottom-left-radius: 15px;
+  border: none;
+  border-bottom-left-radius: 5px;
   text-align: center;
+  box-shadow: 0 1px 5px rgba(0, 0, 0, .65);
+  z-index: 2;
 }
 
 #cover {
@@ -32,16 +33,12 @@ body {
 }
 
 #error {
-  left: 0;
-  right: 0;
-  border-right: 2px solid #000;
-  border-bottom-right-radius: 15px;
+  left: calc(50% - 115px);
+  border-bottom-right-radius: 5px;
   visibility: hidden;
   background: #fff;
-  margin: 0 auto;
   line-height: 22px;
-  width: 20%;
-  min-width: 250px;
+  width: 230px;
 }
 
 #cover a, #error a {
@@ -51,5 +48,5 @@ body {
 }
 
 #cover a:hover, #error a:hover {
-  opacity: 0.5;
+  opacity: .5;
 }
