--- a/gen-web/main.css
+++ b/gen-web/main.css
@@ -12,61 +12,58 @@ body {
   z-index: 0;
 }
 
+/* toolbox */
+
 #tools {
-  display: block;
-  width: 286px;
-  left: calc(50% - 162px);
-  bottom: 60px;
+  float: left;
+  width: 26px;
+  left: 10px;
+  top: 70px;
   position: absolute;
   z-index: 1;
   list-style: none;
   background-color: #fff;
   border-radius: 5px;
   box-shadow: 0 1px 5px rgba(0, 0, 0, .65);
-  height: 50px;
-  vertical-align: middle;
+  height: 215px;
+  margin: 0;
+  padding: 0;
+  text-align: center;
   overflow: hidden;
 }
 
 #tools li{
   display: inline-block;
-  border-right: 1px solid #888;
-  vertical-align: middle;
-  padding: 5px;
   opacity: .5;
+  width: 26px;
+  padding: 5px 0px;
+  border-bottom: 1px solid #999;
 }
 
-#tools li.selected, #tools li.save {
+#tools li.selected {
   opacity: 1;
-}
-
-#tools li.save button {
-  background-color: #bbb;
+  border-bottom: 1px solid #ccc;
 }
 
 #tools li:hover {
   opacity: 1;
-}
-
-#tools li.first{
-  margin-left: -35px;
-  padding-left: 0;
+  border-bottom: 1px solid #ccc;
 }
 
 #tools li.last {
   border: 0;
-  padding-right: 0;
 }
 
 #tools li button {
   border: none;
   padding: none;
-  height: 40px;
-  width: 40px;
-  vertical-align: middle;
+  height: 16px;
+  width: 16px;
   background-color: #fff;
   background-size: contain;
 }
+
+/* points count input panel */
 
 #input {
   display: block;
@@ -89,6 +86,8 @@ body {
 #input input {
   text-align: center;
 }
+
+/* back button (cover) + error message */
 
 #cover, #error {
   position: absolute;
