--- a/gen-web/main.css
+++ b/gen-web/main.css
@@ -1,6 +1,8 @@
 body {
   margin: 0;
   padding: 0;
+  font-family: 'PT Sans', serif;
+  font-size: 12pt;
 }
 
 #map {
@@ -25,11 +27,11 @@ body {
   background-color: #fff;
   border-radius: 5px;
   box-shadow: 0 1px 5px rgba(0, 0, 0, .65);
-  height: 215px;
   margin: 0;
   padding: 0;
   text-align: center;
   overflow: hidden;
+  font-size:0;
 }
 
 #tools li{
@@ -37,6 +39,7 @@ body {
   opacity: .5;
   width: 26px;
   padding: 5px 0px;
+  margin: 0;
   border-bottom: 1px solid #999;
 }
 
