--- a/gen-web/style.css
+++ b/gen-web/style.css
@@ -1,19 +1,3 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: 'PT Sans', serif;
-  font-size: 12pt;
-}
-
-#map {
-  position: absolute;
-  left: 0;
-  top: 0;
-  bottom: 0;
-  width: 100%;
-  z-index: 0;
-}
-
 /* toolbox */
 
 #tools, #poly_sub {
@@ -36,16 +20,6 @@ body {
   border-radius: 5px;
 }
 
-#poly_sub {
-  height: 26px;
-  left: 37px;
-  top: 151px;
-  z-index: 1;
-  border-top-right-radius: 5px;
-  border-bottom-right-radius: 5px;
-  visibility: hidden;
-}
-
 #tools li, #poly_sub li{
   display: inline-block;
   opacity: .5;
@@ -58,20 +32,12 @@ body {
   border-bottom: 1px solid #999;
 }
 
-#poly_sub li{
-  border-right: 1px solid #999;
-}
-
 #tools li:hover, #poly_sub li:hover {
   opacity: 1;
 }
 
 #tools li:hover {
   border-bottom: 1px solid #ccc;
-}
-
-#poly_sub li:hover {
-  border-right: 1px solid #ccc;
 }
 
 #tools li.last, #poly_sub li.last {
@@ -96,6 +62,68 @@ body {
   background-size: contain;
 }
 
+/* polygon submenu */
+
+#poly_sub {
+  height: 26px;
+  left: 37px;
+  top: 151px;
+  z-index: 1;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+  visibility: hidden;
+}
+
+#poly_sub li{
+  border-right: 1px solid #999;
+}
+
+#poly_sub li:hover {
+  border-right: 1px solid #ccc;
+}
+
+/* spray area radius */
+
+#spray_radius {
+  height: 26px;
+  left: 37px;
+  top: 124px;
+  position: absolute;
+  background-color: #fff;
+  box-shadow: 0 1px 5px rgba(0, 0, 0, .65);
+  text-align: center;
+  overflow: hidden;
+  z-index: 1;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+  visibility: hidden;
+}
+
+#spray_radius input {
+  margin: 11px 5px;
+	-webkit-appearance: none;
+	background-color: #ccc;
+	height: 4px;
+}
+
+input[type="range"]::-webkit-slider-thumb {
+	-webkit-appearance: none;
+	position: relative;
+	top: 0px;
+	z-index: 1;
+	width: 11px;
+	height: 11px;
+	cursor: pointer;
+	-webkit-border-radius: 40px;
+	-moz-border-radius: 40px;
+	border-radius: 40px;
+	background: #999;
+}
+
+input[type="range"]::-webkit-slider-thumb:hover {
+	background: #000;
+}
+
 /* points count input panel */
 
 #input {
@@ -118,43 +146,4 @@ body {
 
 #input input {
   text-align: center;
-}
-
-/* back button (cover) + error message */
-
-#cover, #error {
-  position: absolute;
-  top: 0;
-  height: 50px;
-  background: #fff;
-  border: none;
-  border-bottom-left-radius: 5px;
-  text-align: center;
-  box-shadow: 0 1px 5px rgba(0, 0, 0, .65);
-  z-index: 2;
-}
-
-#cover {
-  right: 0;
-  width: 75px;
-  line-height: 50px;
-}
-
-#error {
-  left: calc(50% - 115px);
-  border-bottom-right-radius: 5px;
-  visibility: hidden;
-  background: #fff;
-  line-height: 22px;
-  width: 230px;
-}
-
-#cover a, #error a {
-  font-weight: bold;
-  text-decoration: none;
-  color: #000;
-}
-
-#cover a:hover, #error a:hover {
-  opacity: .5;
 }
