--- a/main.css
+++ b/main.css
@@ -1,9 +1,8 @@
 body {
   margin: 0;
-  padding:0;
+  padding: 0;
   font-family: 'PT Sans', serif;
   font-size: 12pt;
-  text-align: center;
 }
 
 #map {
@@ -12,7 +11,10 @@ body {
   top: 0;
   bottom: 0;
   width: 100%;
+  z-index: 0;
 }
+
+/* back button (cover) + error message */
 
 #cover, #error {
   position: absolute;
@@ -43,7 +45,6 @@ body {
 
 #cover a, #error a {
   font-weight: bold;
-  text-decoration: none;
   color: #000;
 }
 
